# cpp_accelerated_image_quantization

./: .gitignore  CMakeLists.txt  IDENTIFICATION.txt  README.md  README.txt  demo  presentation.url
app/: quantize_image.cpp
images/: accra_coast.jp2  accra_coast_2.jp2
include/ra/: quantization_tools.hpp  queue.hpp  thread_pool.hpp
lib/: thread_pool.cpp
